src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AD_MobilePhone__c</fullName>
        <label>AD MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AD_WorkPhone__c</fullName>
        <label>AD WorkPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AECOM_Projects_Summary__c</fullName>
        <description>Summary of User&apos;s AECOM Projects</description>
        <label>AECOM Projects Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AME_Akkurat_Font_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This user has a license to use the Akkruate font</description>
        <inlineHelpText>Check if this user has a license to the Akkruate font</inlineHelpText>
        <label>AME Akkurat Font user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjusted_Service_Date__c</fullName>
        <description>Adjusted Service Date from HR</description>
        <inlineHelpText>How long has the employee been with the company in years.</inlineHelpText>
        <label>Adjusted Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AffectedByAECOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if updated by AECOM HR file</description>
        <label>AffectedByAECOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AffectedByURS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if updated by URS HR file</description>
        <label>AffectedByURS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_Subcategory__c</fullName>
        <description>Used by geography if they allocate costs.</description>
        <inlineHelpText>Enter geographic-specific allocation group</inlineHelpText>
        <label>Allocation Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentCategory__c</fullName>
        <label>Assignment Category</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentUserStatus__c</fullName>
        <label>Assignment User Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Deactivation_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked to prevent account from being deactivated by IT&apos;s automated process.</description>
        <inlineHelpText>Check contractor and test accounts to prevent account from being deactivated by IT&apos;s automated process, which deactivates accounts for employees when they leave AECOM. Do not check for normal users.</inlineHelpText>
        <label>Auto-Deactivation Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Summary__c</fullName>
        <description>Summary of the user&apos;s Award Profile Parts</description>
        <label>Award Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Card_Title__c</fullName>
        <inlineHelpText>Enter title used on business cards and email signature line</inlineHelpText>
        <label>Business Card Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>Fed from AD</description>
        <inlineHelpText>AECOM business line, if any</inlineHelpText>
        <label>Business Line</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CMC Resource</description>
        <inlineHelpText>CMC Resource - currently used in Middle East Approval process</inlineHelpText>
        <label>CMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Summary__c</fullName>
        <description>Summary field of User&apos;s Certifications Profile Parts</description>
        <label>Certification Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certified_PM__c</fullName>
        <label>Certified PM</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cisco_IP_Phone__c</fullName>
        <inlineHelpText>The number for this user&apos;s Cisco IP Phone</inlineHelpText>
        <label>Cisco IP Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_on_User__c</fullName>
        <description>Comments about this user&apos;s license or status.</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComputedEmployeeNumber__c</fullName>
        <description>Computed employee number so if you search it comes up in search results.  Also may use this to try to make sure field is unique in future</description>
        <formula>EmployeeNumber</formula>
        <label>ComputedEmployeeNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the user has returned acknowlegment</description>
        <label>Confidentiality Agreement Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Title__c</fullName>
        <label>Corporate Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CostRate__c</fullName>
        <label>Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DEManager__c</fullName>
        <description>Delivery Excellence Manager, populated from HR Insight.</description>
        <inlineHelpText>Delivery Excellence Manager, populated from HR Insight.</inlineHelpText>
        <label>DE Manager</label>
        <relationshipName>DEMgr</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DTWApplicationLevel__c</fullName>
        <description>Denotes the highest level this user plays in the DTW Application process</description>
        <inlineHelpText>Denotes the highest level this user plays in the DTW Application process</inlineHelpText>
        <label>DTW Application Level</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Proxy_Added__c</fullName>
        <description>Date when the current Profile Proxy was added to this user</description>
        <label>Date Proxy Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent_for_Review__c</fullName>
        <description>Date/Time when any profile part belonging to this user was sent to CM Review. Set when first part sent and cleared when all parts are approved.</description>
        <label>Date Time Sent for Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <inlineHelpText>District name</inlineHelpText>
        <label>District</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_BusinessLine__c</fullName>
        <label>ECO Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_Geography__c</fullName>
        <label>ECO Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_OUID__c</fullName>
        <label>ECO_OUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_OrganizationName__c</fullName>
        <label>ECO Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_Region__c</fullName>
        <label>ECO Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EcoBusinessGroup__c</fullName>
        <label>Eco Business Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Summary__c</fullName>
        <description>Summary of User&apos;s Education Profile Parts</description>
        <label>Education Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Category__c</fullName>
        <inlineHelpText>Exempt, Salaried, Temporary, Permanent, etc.</inlineHelpText>
        <label>Employee Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finance Member</description>
        <inlineHelpText>Finance Member - currently used in Middle East on Approval process for go/no go</inlineHelpText>
        <label>F&amp;A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Allocation__c</fullName>
        <description>Geography that has commited to receiving the cost allocation for this license</description>
        <inlineHelpText>Select the geography that has commited to receiving the cost allocation for this license</inlineHelpText>
        <label>Geography Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>From AD</description>
        <inlineHelpText>AECOM Geography locatio</inlineHelpText>
        <label>Geography</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Position_Title__c</fullName>
        <label>Global Position Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Discipline__c</fullName>
        <label>HR Discipline</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Full_Name__c</fullName>
        <inlineHelpText>Full name (Last name, first name)</inlineHelpText>
        <label>HR Full Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Job_Title__c</fullName>
        <inlineHelpText>HR Job Title</inlineHelpText>
        <label>HR Job Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasDefaultApplicationsSet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the user trigger no longer attempts to create default applications.</description>
        <inlineHelpText>When checked the user trigger no longer attempts to create default applications.</inlineHelpText>
        <label>Has Default Applications Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDReport__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDReport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Countries__c</fullName>
        <description>User&apos;s countries that they would be particularly interested to relocate</description>
        <label>Interest Countries</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Regions__c</fullName>
        <description>Regions User is interested in relocating to</description>
        <label>Interest Regions</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia + New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interest_Relocating_Current_Country__c</fullName>
        <description>User&apos;s interest in relocating to a different city in current country of residence</description>
        <label>Interest Relocating Current Country</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Relocating_Different_Country__c</fullName>
        <description>User&apos;s interest in relocating to another country for an opportunity</description>
        <label>Interest Relocating Different Country</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Assignment_Status__c</fullName>
        <inlineHelpText>Identifies Ex-Pat</inlineHelpText>
        <label>International Assignment Status</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsValidGBSQueueMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsValidGBSQueueMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Profile_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Profile Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <label>Job Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Family_Meaning__c</fullName>
        <label>Job Family Meaning</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Summary__c</fullName>
        <description>Summary of User&apos;s Languages Profile Parts</description>
        <label>Languages Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Processed_Payroll_Run__c</fullName>
        <label>Last Processed Payroll Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Profile_Proxy__c</fullName>
        <label>Last Profile Proxy</label>
        <relationshipName>LastProxies</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>LeadVerifier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A user will submit an application to become a lead verifier.</description>
        <label>Lead Verifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <description>The users default legal entity.</description>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal Member</description>
        <inlineHelpText>Legal Member - currently used in Middle East on Approval process for go/no go</inlineHelpText>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_Time_Abroad__c</fullName>
        <description>User&apos;s desired time length to work aboard</description>
        <label>Length of Time Abroad</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months to 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ME_Go_NoGo_Approver__c</fullName>
        <label>ME Go - NoGo Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <relationshipName>Go_NoGo_Approval</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ManagerID__c</fullName>
        <label>ManagerID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Names__c</fullName>
        <label>Middle Names</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_GNG_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Approver for the North America Go - NoGo approval process</inlineHelpText>
        <label>NA GNG Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Names_Suffix__c</fullName>
        <label>Names Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Interest_Countries__c</fullName>
        <description>List of Countries User has no interest in relocating to</description>
        <label>No Interest Countries</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Interest_Regions__c</fullName>
        <description>Regions that User has no desire to relocate to</description>
        <label>No Interest Regions</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia + New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Non_AECOM_Projects_Summary__c</fullName>
        <description>Summary of User&apos;s Non-AECOM Projects</description>
        <label>Non-AECOM Projects Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for test accounts, service accounts, and other accounts that should not be visible to regular users.</description>
        <inlineHelpText>Check for test accounts, services accounts, and other non-employees.</inlineHelpText>
        <label>Non-employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NormalTransDateTime__c</fullName>
        <label>Normal Trans Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OfficeAddress1__c</fullName>
        <label>Office Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeAddress2__c</fullName>
        <label>Office Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeAddress3__c</fullName>
        <label>Office Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeCity__c</fullName>
        <label>Office City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeCountry__c</fullName>
        <label>Office Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficePostalCode__c</fullName>
        <label>Office Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeState__c</fullName>
        <label>Office State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <inlineHelpText>Employee&apos;s Office Name</inlineHelpText>
        <label>Office</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleEmployeeId__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Employee Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Hire_Date__c</fullName>
        <inlineHelpText>Date first hired at AECOM</inlineHelpText>
        <label>Original Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLManager__c</fullName>
        <description>Regional P&amp;L Manager populated from HR Insight.</description>
        <inlineHelpText>Regional P&amp;L Manager populated from HR Insight.</inlineHelpText>
        <label>P&amp;L Manager</label>
        <relationshipName>PLMember</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PL_Manager__c</fullName>
        <label>PL Manager</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <label>PM</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonId__c</fullName>
        <label>Person ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonType__c</fullName>
        <label>Person Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Affiliation_Summary__c</fullName>
        <description>Summary of User&apos;s Professional Affiliations Profile Parts</description>
        <label>Professional Affiliation Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Proxy_Email__c</fullName>
        <label>Profile Proxy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Profile_Proxy__c</fullName>
        <label>Profile Proxy</label>
        <relationshipName>Proxies</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Profile_Reviewer__c</fullName>
        <inlineHelpText>Field denoting who the Profile is assigned to for review</inlineHelpText>
        <label>Profile Reviewer</label>
        <relationshipName>Reviewees</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ProjectAccountantAuthority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Accountant Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectManagerAuthority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Manager Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Approver__c</fullName>
        <label>Project Approver</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <label>Project Director</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Summary__c</fullName>
        <description>Summary of User&apos;s Publication Profile Parts</description>
        <label>Publication Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Region name</inlineHelpText>
        <label>Region</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Summary__c</fullName>
        <description>Summary of User&apos;s Registration Profile Parts</description>
        <label>Registration Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rehire_Date__c</fullName>
        <inlineHelpText>Date of most recent hire at AECOM</inlineHelpText>
        <label>Rehire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Name__c</fullName>
        <inlineHelpText>Enter name as it should appear on the resume.</inlineHelpText>
        <label>Name on Resume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Output_Name__c</fullName>
        <formula>IF( ISBLANK( Resume_Name__c ), FirstName &amp; &quot; &quot; &amp; LastName, Resume_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resume Output Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Output_Title__c</fullName>
        <formula>IF( ISBLANK(Resume_Title__c) , IF( ISBLANK(HR_Job_Title__c) , Business_Card_Title__c , HR_Job_Title__c) , Resume_Title__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resume Output Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Title__c</fullName>
        <label>Title on Resume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF254_Summary__c</fullName>
        <description>Summary of User&apos;s SF254 Profile Parts</description>
        <label>SF254 Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF330_Summary__c</fullName>
        <description>Summary of User&apos;s SF330 Profile Parts</description>
        <label>SF330 Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Proxy_Notification__c</fullName>
        <inlineHelpText>What type of proxy notification to send to the employee</inlineHelpText>
        <label>Send Proxy Notification</label>
        <picklist>
            <picklistValues>
                <fullName>Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShaKey__c</fullName>
        <label>ShaKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Services_Is_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the current User a senior executive?  This will affect the prioritization of incoming requests for help.</description>
        <inlineHelpText>Is the current User a senior executive?  This will affect the prioritization of incoming requests for help.</inlineHelpText>
        <label>Shared Services Is Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill_Index_Summary__c</fullName>
        <description>Summary of User&apos;s Skill Index Profile Parts</description>
        <label>Skill Index Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the overall profile</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Business_Line__c</fullName>
        <label>Sub Business Line</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supergeography__c</fullName>
        <inlineHelpText>AECOM super geography</inlineHelpText>
        <label>Supergeography</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <inlineHelpText>Date employee left AECOM</inlineHelpText>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrackingID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Employee Tracking ID</inlineHelpText>
        <label>TrackingID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Training_Summary__c</fullName>
        <description>Summary of User&apos;s Training Profile Parts</description>
        <label>Training Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Translations_Summary__c</fullName>
        <description>Summary of User&apos;s Translations Profile Parts</description>
        <label>Translations Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>